# juki-pretix-taschennummer

./: .gitignore  README.md  pyproject.toml  pytest.ini
pretix_bagnumbers/: apps.py  exporters.py  forms.py  logentrytypes.py  models.py  services.py  signals.py  urls.py  views.py
pretix_bagnumbers/locale/de/LC_MESSAGES/: django.mo  django.po
pretix_bagnumbers/locale/en/LC_MESSAGES/: django.mo  django.po
pretix_bagnumbers/migrations/: 0001_initial.py
pretix_bagnumbers/templates/pretix_bagnumbers/: number_form.html  order_info.html  overview.html  range_delete_confirm.html  range_form.html
tests/: conftest.py  test_forms.py  test_services.py  test_signals.py
